css/site.css
/* ... */
.product-logo img {
    width: 20px;
    height: 20px;
    position: relative;
    top: 0px;
}

.product-link {
    display: block;
    position: absolute;
    bottom: 14px;
    text-align: right;
    font-weight: bold;
    font-size: 10px;
    padding-left: 40px;
}

.clear {
    clear: both;
}

#footer .links {
    text-align: center;
    position: relative;
    top: -2px;
    z-index: 1;
}

#footer .logos {
    position: absolute;
    right: 10px;
    z-index: 2;
}

#footer .copyright {
    color: #999;
    position: absolute;
    left: 10px;
    z-index: 2;
}

.product-image {
    display: none;
    position: absolute;
    right: 20px;
    top: 10px;
}

.product-image .main-screenshot img {
    width: 100px;
}

.products-bottom-bar {
    clear:both;
    margin-top: 20px;
}

.master-separator {
    clear: both;
    border-bottom: 2px dashed #cdcdcd;
    margin-bottom: 20px;
    margin-top: 20px;
}

.master-separator .separator-wrapper {
    background-color: white;
    padding: 0px 0px;
    position: relative;
    top: 10px;
    left: 20px;
}

.master-separator .separator-label {
    color: #cdcdcd;
    font-weight: bold;
    padding: 2px 10px;
    font-size: 14px;
}

#blog h2 {
    margin: 20px 25px 0px 0px;
    font-family: 'Helevetica Neue', Helvetica;
    font-size: 16px;
    font-weight: bold;
    list-style-type: none;
    line-height: 20px;
    margin-bottom: 10px;
}

#blog h2 a {
    text-decoration: none;
    color: #656565;
    display: inline;
    padding: 2px 10px;
    -webkit-border-radius: 8px 8px;
    -moz-border-radius: 8px;
    background-color: #eee;
}

#blog h2 a:hover {
    color: #000;
}

.blog-side-inner {
    margin-top:40px;
    border-left: 1px solid #aaa;
    margin-left: 20px;
    padding-left: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
}

#blog #post h2 {
    color: #fff;
    background-color: #525252;
    display: inline;
    padding: 2px 10px;
    -webkit-border-radius: 8px 8px;
    -moz-border-radius: 8px;
}

.post-content {
    margin-top: 20px;
    margin-left: 10px;
}

.excerpt {
    margin-left: 10px;
}

#blog {
    line-height: 20px;
    font-size: 14px;
}

.more-box {
    margin-top: 30px;
}

.more-box-align, .download-row {
    margin-left: 40px;
}

.languages {
    font-size: 18px;
    float: left;
    margin-left: 40px;
    position: relative;
    top: -2px;
}

.alt-menu {
    margin: 20px 25px 0px 0px;
    font-family: 'Helevetica Neue', Helvetica;
    font-size: 16px;
    font-weight: bold;
    list-style-type: none;
    line-height: 20px;
}

.alt-menu li {
    margin-left: 20px;
    float: left;
}

.alt-menu a {
    text-decoration: none;
    color: #656565;
    display: block;
    padding: 2px 10px;
    -webkit-border-radius: 8px 8px;
    -moz-border-radius: 8px;
    background-color: #eee;
}

.alt-menu li a:hover {
    color: #000;
}

.php .alt-item-php,
.python .alt-item-python {
    background-color: #656565;
    color: #fff !important;
}

.retweet, .facebook, .digg {
    float:left;
    margin: 0px 5px;
}

.main-right .main-screenshot {
    min-height: 300px;
}

